# rust-atomizer

./: .env.example  .gitignore  2961.json  2968.json  2969.json  2972.json  2974.json  2978.json  2981.json  2982.json  2985.json  2986.json  2987.json  2988.json  2990.json  3001.json  3008.json  3035.json  3048.json  3051.json  3053.json  3088.json  3089.json  3118.json  3122.json  3128.json  3129.json  3130.json  3131.json  3132.json  3137.json  3139.json  3140.json  3141.json  3142.json  3143.json  3144.json  3145.json  3146.json  3147.json  (+75 more)
.cache_populate_atomsdeps/: codes_2961.json  codes_2968.json  codes_2969.json  codes_2972.json  codes_2974.json  codes_2977.json  codes_2978.json  codes_2981.json  codes_2982.json  codes_2985.json  codes_2986.json  codes_2987.json  codes_2988.json  codes_2990.json  codes_3001.json  codes_3008.json  codes_3035.json  codes_3048.json  codes_3051.json  codes_3053.json  codes_3088.json  codes_3089.json  codes_3118.json  codes_3122.json  codes_3127.json  codes_3128.json  codes_3129.json  codes_3130.json  codes_3131.json  codes_3132.json  codes_3139.json  codes_3140.json  codes_3141.json  codes_3142.json  codes_3143.json  codes_3144.json  codes_3145.json  codes_3146.json  codes_3147.json  codes_3148.json  (+60 more)
debug_output/: calls.json  collisions.json  files.json  symbols.json
scripts/: 3212_atoms_debug.csv  atomizer-loop.py  atoms_debug.csv  atoms_debug.json  check_filenames_in_json.py  poptest.py  populate_atomsdeps_grouped_rust.py  populate_test.py  temp.json
src/: lib.rs  scip_to_call_graph_json.rs  scip_to_call_graph_json_final.rs  (+1 more)
(+3 files in other folders)
