[package]
name = "rust-atomizer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scip = "0.6.0" 
html-escape = "0.2.13"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "visit", "parsing"] }
quote = "1.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "write_atoms"
path = "src/bin/write_atoms.rs"
